# Math-To-Manim

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
KimiK2.5Swarm/agents/: prerequisite_explorer_kimi.py
KimiK2.5Swarm/examples/: test_gradient_descent_pipeline.py  test_qft_pipeline.py
docs/specs/: EulerTest.md  skilltest.md
examples/mathematics/fourier/: fourier_epicycles.py
scripts/: generate_manim_from_tree.py  remove_emojis.py  run_pipeline_from_latex.py
src/: __init__.py
src/agents/: __init__.py  knowledge_node.py  llm_client.py  mathematical_enricher.py  narrative_composer.py  orchestrator.py  prerequisite_explorer.py  prerequisite_explorer_claude.py  threejs_code_generator.py  visual_designer.py
tests/: conftest.py
tests/unit/: test_knowledge_node.py  test_llm_client.py  test_prerequisite_explorer.py
tools/: generate_mermaid.py
